@@ -20,7 +20,7 @@ package eSTAR::RTML::Parse;
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: Parse.pm,v 1.12 2002/03/29 18:02:15 aa Exp $
+#     $Id: Parse.pm,v 1.13 2003/06/03 17:35:15 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 200s University of Exeter. All Rights Reserved.
@@ -56,13 +56,13 @@ use Net::Domain qw(hostname hostdomain);
 use File::Spec;
 use Carp;
 
-'$Revision: 1.12 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.13 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 # C O N S T R U C T O R ----------------------------------------------------
 
 =head1 REVISION
 
-$Id: Parse.pm,v 1.12 2002/03/29 18:02:15 aa Exp $
+$Id: Parse.pm,v 1.13 2003/06/03 17:35:15 aa Exp $
 
 =head1 METHODS
 
@@ -304,8 +304,23 @@ Return the exposure time required
 =cut
 sub exposure {
   my $self = shift;
-  return ${${${$self->{OBSERVATION}}{SChedule}}{Exposure}}{tag_value};
+  return ${${${$self->{OBSERVATION}}{Schedule}}{Exposure}}{tag_value};
 }
+
+=item B<snr>
+
+Return the signal-to-noise ratio required
+
+  $snr = $rtml->snr();
+
+=cut
+
+sub snr {
+  my $self = shift;
+  return ${${${$self->{OBSERVATION}}{Schedule}}{Exposure}}{tag_value};
+}
+
+
 
 # C O N F I G U R E ----------------------------------------------------------
 
