@@ -5,7 +5,7 @@ use strict;
 
 #load test
 use Test;
-BEGIN { plan tests => 5 };
+BEGIN { plan tests => 11 };
 
 # load modules
 use eSTAR::RTML;
@@ -46,3 +46,32 @@ my $doc = $message->dump_rtml();
 
 print $doc;
 
+# Create an RTML object
+my $message2 = new eSTAR::RTML::Build( 
+             Port        => '2000',
+             ID          => 'IA:aa@bofh.astro.ex.ac.uk:2000:0002',
+             User        => 'aa',
+             Name        => 'Alasdair Allan',
+             Institution => 'University of Exeter',
+             Email       => 'aa@astro.ex.ac.uk' );
+             
+# build a score request
+my $status = $message2->score_observation(
+             Target => 'Test Target',
+             RA     => '09 00 00',
+             Dec    => '+60 00 00', 
+             Snr    => '3.0',
+             Flux   => '12.0' );
+
+# check some tag information
+ok( $message2->port(), 2000 );
+ok( $message2->id(), 'IA:aa@bofh.astro.ex.ac.uk:2000:0002' );
+ok( $message2->ra(), '09 00 00' );
+ok( $message2->dec(), '+60 00 00' );
+ok( $message2->snr(), '3.0' );
+ok( $message2->flux(), '12.0' );
+
+# dump out the request
+my $doc2 = $message2->dump_rtml();
+
+print $doc2;
